small add for scrollbar. maybe fixes the issue

--- a/static/style.css
+++ b/static/style.css
@@ -12,6 +12,7 @@
     color: white;
     font-size: 12px;
     font-family: 'uml';
+    scrollbar-width: none;
 }
 body{
     /* overflow: hidden; */
